--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,3 +4,5 @@
    <li><%= link_to(task.title, task_path(task.id))%></li>
   <% end %>
 </ul>
+
+<%= link_to('Create a new task!', tasks_new_path)%>
