--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,4 @@
 <h2>Task: <%= @task.title %></h2>
 <p>Details: <%= @task.details %></p>
 
-<%= link_to('Back home', tasks_path) %>
+<%= link_to('Back to the list', tasks_path) %>
