--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,3 +2,10 @@
 <p>Details: <%= @task.details %></p>
 
 <%= link_to('Back to the list', tasks_path) %>
+
+<%= link_to('edit a task', edit_task_path) %>
+
+<%= link_to "Delete",
+  task_path(@task),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+%>
