--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,9 +3,9 @@
 
 <%= link_to('Back to the list', tasks_path) %>
 
-<%= link_to('edit a task', edit_task_path) %>
+<%= link_to('Edit the task!', edit_task_path) %>
 
-<%= link_to "Delete",
+<%= link_to "Delete that task!",
   task_path(@task),
-  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure about that?"}
 %>
